# benefit_buddy

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  agent.py  agents-cli-manifest.yaml  deployment_metadata.json  index_data.py  pyproject.toml  requirements.txt  setup_data.py
.adk/: session.db
.agents/: AGENTS.md  CONTEXT.md
.agents/rules/: .gitkeep
.agents/skills/stride-threat-model/: SKILL.md
.specify/memory/: constitution.md
app/: agent.py  setup_data.py
app/app_utils/: telemetry.py  typing.py
app/dataset_search_agent/: __init__.py
app/intake_agent/: __init__.py  agent.py
app/tavily_search_agent/: agent.py
app/tools/: dataset_search_tool.py  tavily_search_tool.py  web_search_tool.py
dataset_search_agent/: agent.py
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
guardrail_response_agent/: __init__.py  agent.py
intake_agent/: agent.py
specs/: roadmap.md
specs/001-intake-agent/: plan.md  spec.md  tasks.md
tavily_search_agent/: __init__.py  agent.py
tests/: conftest.py  test_dataset_search.py  test_guardrail_agent.py  test_intake_agent.py  test_security_red_team.py  test_tavily_extract.py  test_tavily_search.py  test_terminal_chat.py  test_web_search.py
tools/: dataset_search_tool.py  security_tool.py  tavily_search_tool.py  web_search_tool.py
web_search_agent/: agent.py
