# Copyright (c) 2026 MyCompany LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benefit_buddy"
version = "0.1.0"
description = "A government welfare scheme recommendation agent built with Google ADK."
readme = "README.md"
authors = [{ name = "Hargurjeet", email = "hargurjeet@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "google-genai==2.10.0",
    "google-adk==2.3.0",
    "duckduckgo_search==8.1.1",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-gcp-logging",
    "opentelemetry-exporter-gcp-trace",
    "pydantic",
    "numpy",
    "python-dotenv",
    "mcp>=1.2.0"
]

[tool.setuptools.packages.find]
include = ["*agent*", "tools*"]
exclude = ["data*", "logs*", "specs*", "tests*"]

[tool.setuptools]
py-modules = ["agent"]

